sdk/4000/ps4000Api.h

	typedef unsigned __int64 u_int64_t;


typedef enum enPS4000Channel
{
	PS4000_CHANNEL_A,
	PS4000_CHANNEL_B,
	PS4000_CHANNEL_C,
	PS4000_CHANNEL_D,
	PS4000_EXTERNAL,	
	PS4000_MAX_CHANNELS = PS4000_EXTERNAL,
	PS4000_TRIGGER_AUX,
	PS4000_MAX_TRIGGER_SOURCES
}	PS4000_CHANNEL;


typedef enum enPS4000Probe
{
	P_NONE,
	P_CURRENT_CLAMP_10A,
	P_CURRENT_CLAMP_1000A,
	P_TEMPERATURE_SENSOR,
	P_CURRENT_MEASURING_DEVICE,
	P_PRESSURE_SENSOR_50BAR,
	P_PRESSURE_SENSOR_5BAR,
	P_OPTICAL_SWITCH,
	P_UNKNOWN,
	P_MAX_PROBES = P_UNKNOWN
} PS4000_PROBE;



typedef enum enPS4000ChannelInfo
{
	CI_RANGES,
	CI_RESISTANCES,
	CI_ACCELEROMETER,
	CI_PROBES,
	CI_TEMPERATURES
} PS4000_CHANNEL_INFO;


typedef enum enPs4000HoldOffType
{
	PS4000_TIME,
	PS4000_MAX_HOLDOFF_TYPE
} PS4000_HOLDOFF_TYPE;


typedef enum enPS4000FrequencyCounterRange
{
  FC_2K,
  FC_20K,
  FC_MAX
}PS4000_FREQUENCY_COUNTER_RANGE;


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (ps4000HoldOff)
	(
	  short								handle,	
		u_int64_t						holdoff,
		PS4000_HOLDOFF_TYPE	type
	);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (ps4000GetProbe)
	(
	  short						handle,
		PS4000_PROBE	* probe
	);


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (ps4000GetChannelInformation) 
	(
		short handle, 
		PS4000_CHANNEL_INFO info, 
		int probe, 
		int * ranges,
		int * length,
		int channels
  );


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (ps4000SetFrequencyCounter)
  (
    short handle, 
    PS4000_CHANNEL channel, 
    short enabled, 
    PS4000_FREQUENCY_COUNTER_RANGE range, 
    short thresholdMajor, 
    short thresholdMinor
  );


PREF0 PREF1 PICO_STATUS PREF2 PREF3 (ps4000EnumerateUnits)
	(
	short * count,
	char * serials,
	short * serialLth
	);