sdk/4000/PS4000.inc


function ps4000HoldOff
	(
	  handle : smallint;	
		holdoff : Int64;
		type : Integer
	) : Integer;
{$IFDEF WIN32} stdcall; external 'ps4000.dll'{$ENDIF}

function ps4000GetProbe
	(
	  handle : smallint;
		probe : Pointer
	) : Integer;
{$IFDEF WIN32} stdcall; external 'ps4000.dll'{$ENDIF}

function ps4000GetChannelInformation 
	(
		handle : smallint; 
		info : Integer;
		probe : Integer; 
		ranges : Pointer;
		length : Pointer;
		channels : Integer
  ) : Integer;
{$IFDEF WIN32} stdcall; external 'ps4000.dll'{$ENDIF}

function ps4000SetFrequencyCounter
  (
    handle : smallint; 
    channel : Integer; 
    enabled : smallint;
    range : Integer; 
    thresholdMajor : smallint; 
    thresholdMinor : smallint
  ) : Integer;
{$IFDEF WIN32} stdcall; external 'ps4000.dll'{$ENDIF}

function ps4000EnumerateUnits
	(
		count : Pointer;
		serials : Pointer;
		serialLth : Pointer
	) : Integer;
{$IFDEF WIN32} stdcall; external 'ps4000.dll'{$ENDIF}